<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Accessibility</string>


    <string name="bad_examples">Bad Examples</string>

    <string name="textview_example">TextView Examples</string>
    <string name="type_email_here">Type Email Here</string>

    <string name="mon">MON</string>
    <string name="monday">Monday</string>
    <string name="tue">TUE</string>
    <string name="tuesday">Tuesday</string>
    <string name="wed">WED</string>
    <string name="wednesday">Wednesday</string>
    <string name="thu">THU</string>
    <string name="thursday">Thursday</string>
    <string name="fri">FRI</string>
    <string name="friday">Friday</string>

    <string name="show_toast">Show Toast</string>
    <string name="toast_button_clicked">Yay AnDevCon Santa Clara!</string>

    <string name="action">Action</string>
    <string name="snackbar_action_text">Snackbar Action Text</string>

    <string name="change_number">Change Number</string>
    <string name="one">1</string>

    <string name="imageview_example">ImageView Examples</string>
    <string name="what_type_of_pokemon">What type of Pokemon is this?</string>
    <string name="reveal_answer">Reveal Answer</string>
    <string name="hide_answer">Hide Answer</string>
    <string name="bulbasaur_is_dual_type">Bulbasaur is dual-type Grass and Poison</string>

    <string name="layout_example">Layout Examples</string>
    <string name="read_me">Read me</string>
    <string name="as_a">as a</string>
    <string name="single">single</string>
    <string name="item">item.</string>

    <string name="more_options">More Options</string>
    <string name="this_text_is_different">This TalkBack text is different</string>
    <string name="action_settings">Settings</string>
    <string name="this_is_a_button">This is a Button</string>
    <string name="hidden_text">This was a hidden TextView</string>
    <string name="toggle_visibility">Toggle Visibility</string>

    <string name="show_pokemon">Show Pokemon</string>
    <string name="hide_pokemon">Hide Pokemon</string>

    <string name="now_showing_pokemon">Now showing pokemon</string>
    <string name="title_activity_bad_example">BadExampleActivity</string>

    <string name="lost_fab_example">Lost FAB Example</string>
    <string name="material_example">Material Examples</string>

    <string name="title_activity_material">Material Activity</string>
    <string name="just_view">This is a card view with no on-click listener.</string>
    <string name="on_click">This card view layout is identical, except it has an on-click listener.</string>
    <string name="over_ride_content_desc">This card view has an on-click listener, and a content
        description set on the entire card.</string>

    <string name="charmander_access_details">Charmander is a fire type pokemon. It is orange in color
        and has a flaming tail.</string>

    <string name="floating_action">Floating Action</string>
    
    <!-- Pokemon Names -->
    <string name="charmander">Charmander</string>
    <string name="bulbasaur">Bulbasaur</string>
    <string name="squirtle">Squirtle</string>
    <string name="pikachu">Pikachu</string>
    <string name="jigglypuff">Jigglypuff</string>

    <!-- Pokemon Types -->
    <string name="electric_pokemon">Electric Pokemon</string>
    <string name="fairy_pokemon">Fairy Pokemon</string>
    <string name="fire_pokemon">Fire Pokemon</string>

    <!-- Placeholder Text -->
    <string name= "veggie_ipsum">Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi
        welsh onion daikon amaranth tatsoi tomatillo melon azuki bean garlic.</string>
    <string name="title_activity_lost_fab">LostFabActivity</string>

    <string name="hello_world">Hello world!</string>
</resources>
