<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layout_android_robots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/image_button_pokeball"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:contentDescription="@string/show_pokemon"
            android:src="@drawable/pokeball_closed" />

        <LinearLayout
            android:id="@+id/layout_android_images_robots"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/now_showing_pokemon"
            android:orientation="horizontal"
            android:visibility="visible">

            <ImageView
                android:id="@+id/image_view_charmander"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/charmander"
                android:src="@drawable/charmander" />

            <ImageView
                android:id="@+id/image_view_bulbasaur"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/bulbasaur"
                android:src="@drawable/bulbasaur" />

            <ImageView
                android:id="@+id/image_view_squirtle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/squirtle"
                android:src="@drawable/squirtle" />

            <ImageView
                android:id="@+id/image_view_pikachu"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/pikachu"
                android:src="@drawable/pikachu" />

            <ImageView
                android:id="@+id/image_view_jigglypuff"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/jigglypuff"
                android:src="@drawable/jigglypuff" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/text_view_clickable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_android_robots"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:contentDescription="@string/this_text_is_different"
        android:text="@string/clickable_text_view"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_clickable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_clickable"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/clickable_button"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_toggle_visibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_clickable"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/toggle_visibility"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_view_hidden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_toggle_visibility"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/hidden_text"
        android:textSize="20sp"
        android:visibility="gone" />

</RelativeLayout>
