<!--
    FAB Accessibility Icon comes from:
    https://google.github.io/material-design-icons/

    Used under the Creative Common Attribution 4.0 International
    License (CC-BY 4.0).
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_material_examples"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.accessibilitytest.MaterialActivity">

    <ScrollView
        android:id="@+id/scroll_cards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view_pikachu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                card_view:cardUseCompatPadding="true"
                card_view:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="20dp">

                    <ImageView
                        android:id="@+id/image_pikachu_pic"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:contentDescription="@null"
                        android:src="@drawable/pikachu" />

                    <TextView
                        android:id="@+id/text_pikachu_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/image_pikachu_pic"
                        android:paddingLeft="20dp"
                        android:text="@string/pikachu"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/text_pikachu_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/text_pikachu_name"
                        android:paddingLeft="95dp"
                        android:text="@string/electric_pokemon"
                        android:textSize="20sp"
                        android:textStyle="italic" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/text_pikachu_details"
                        android:paddingLeft="95dp"
                        android:text="@string/just_view" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view_pikachu_on_click"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                card_view:cardUseCompatPadding="true"
                card_view:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="20dp">

                    <ImageView
                        android:id="@+id/image_pikachu_pic_on_click"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:contentDescription="@null"
                        android:src="@drawable/pikachu" />

                    <TextView
                        android:id="@+id/text_pikachu_name_on_click"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/image_pikachu_pic_on_click"
                        android:paddingLeft="20dp"
                        android:text="@string/pikachu"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/text_pikachu_details_on_click"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/text_pikachu_name_on_click"
                        android:paddingLeft="95dp"
                        android:text="@string/electric_pokemon"
                        android:textSize="20sp"
                        android:textStyle="italic" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/text_pikachu_details_on_click"
                        android:paddingLeft="95dp"
                        android:text="@string/on_click" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view_charmander"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                card_view:cardUseCompatPadding="true"
                card_view:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="20dp">

                    <ImageView
                        android:id="@+id/image_charmander_pic"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:contentDescription="@null"
                        android:src="@drawable/charmander" />

                    <TextView
                        android:id="@+id/text_charmander_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/image_charmander_pic"
                        android:paddingLeft="20dp"
                        android:text="@string/charmander"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/text_charmander_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/text_charmander_name"
                        android:paddingLeft="95dp"
                        android:text="@string/fire_pokemon"
                        android:textSize="20sp"
                        android:textStyle="italic" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/text_charmander_details"
                        android:paddingLeft="95dp"
                        android:text="@string/over_ride_content_desc" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view_jigglypuff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                card_view:cardUseCompatPadding="true"
                card_view:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="20dp">

                    <ImageView
                        android:id="@+id/image_jigglypuff_pic"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:contentDescription="@null"
                        android:src="@drawable/jigglypuff" />

                    <TextView
                        android:id="@+id/text_jigglypuff_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/image_jigglypuff_pic"
                        android:paddingLeft="20dp"
                        android:text="@string/jigglypuff"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/text_jigglypuff_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/text_jigglypuff_name"
                        android:paddingLeft="95dp"
                        android:text="@string/fairy_pokemon"
                        android:textSize="20sp"
                        android:textStyle="italic" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/text_jigglypuff_details"
                        android:paddingLeft="95dp"
                        android:text="@string/veggie_ipsum" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_accessibility_white_24dp"
        android:contentDescription="@string/floating_action"/>

</RelativeLayout>